[tool.poetry]
name = "yamlsearcher"
version = "0.1.2"
description = ""
authors = ["mgla96 <mattgottlieb96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pylint = "^2.12.2"
coverage = "^6.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
